--- a/webapp/view/HelloPanel.view.xml
+++ b/webapp/view/HelloPanel.view.xml
@@ -6,7 +6,14 @@
                   headerText="{i18n>helloPanelTitle}"
                   class="sapUiResponsiveMargin"
                   width="auto">
+                  <Button
+                       icon="sap-icon://world"
+                       id="helloDialogButton"
+                       text="{i18n>openDialogButtonText}"
+                       press=".onOpenDialog"
+                       class="sapUiSmallMarginEnd"/>
                  <Button
+                        icon="sap-icon://email-read"
                         text="{i18n>showHelloButtonText}"
                         press=".onShowHello"
                         class="sapUiSmallMarginEnd"/>
